# MFM-Module-Core

./: .gitignore  CMakeLists.txt  LICENSE  avr-gcc.toolchain.cmake  gcc-avr.cmake  library.json  platformio.ini
docs/: index.md  operatingsystem.drawio  registry.md  smbalert.md
drivers/: CMakeLists.txt  sen0313.c
examples/: CMakeLists.txt
examples/ads1118/: CMakeLists.txt  main.c
examples/delay/: CMakeLists.txt  main.c
examples/ds18b20/: CMakeLists.txt  main.c
examples/onewire/: CMakeLists.txt  main.c
examples/os/: CMakeLists.txt  main.c
examples/sen0313/: CMakeLists.txt  main.c
examples/twi/: CMakeLists.txt  main.c
examples/uart/: CMakeLists.txt  main.c
include/: config_template.h  debug.h  events.h  main.h  twi.h
include/drivers/: ads1118.h  onewire.h  sen0313.h  smbus.h  spi.h  twi.h
include/global/: ev_events.h
include/mcu/: spi.h  twi.h  uart.h  util.h
include/os/: circulair_queue.h  linked_queue.h  os.h
include/perif/: ads1118.h  ds18b20.h  sen0313.h
lib/events/: library.json
lib/events/include/: events.h
lib/events/src/: events.c  events.cpp
mcu/: CMakeLists.txt  twi.c  twi.h
os/: CMakeLists.txt  circulair_queue.c
src/: CMakeLists.txt  events.c  events.cpp  main.c  main.cpp  twi.cpp
src/drivers/: CMakeLists.txt  ads1118.c  onewire.c  sen0313.c  spi.c  twi.c  uart.c
src/main/: main.cpp
src/mcu/: CMakeLists.txt  spi.c  twi.c  uart.c  util.c
src/module/: main.cpp
src/os/: CMakeLists.txt  linked_queue.c  lock.c  os.c
src/perif/: CMakeLists.txt  ads1118.c  ds18b20.c  sen0313.c
test/: host_test_events.cpp
test/host_test_events/: host_test_events.cpp
tests/: CMakeLists.txt  test_linked_queue.c
tests/native/: CMakeLists.txt  test_circulair_queue.c  test_linked_queue.c  test_os_lock.c
